@@ -53,3 +53,4 @@ Version 1.1
  - Fixed Issue 338 - Update Aeon Labs Multi Sensor Config File (Alex)
  - Fixed Issue 339 - Update Fibaro Door Opening Sensor Config File (Alex)
  - Fixed Issue 340 - Add Remotec ZRC-100 Remote Control (Alex)
+ - Fixed Issue 301 - Add Philio PAN04-1 Relay Insert (Alex)
